fix admin add user and profile user

--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -144,22 +144,22 @@
 							<li class="menu-item-0">
 								<div class="penci-megamenu">
 									<div class="penci-mega-child-categories">
-										<a class="mega-cat-child" href="#" data-id="penci-mega-1">
+										<a class="mega-cat-child" href="http://localhost:8080/recipes?query=Hanoi+foods&type=category" data-id="penci-mega-1">
 											<span>Hanoi foods</span>
 										</a>
-										<a class="mega-cat-child" href="#" data-id="penci-mega-2">
+										<a class="mega-cat-child" href="http://localhost:8080/recipes?query=Saigon+foods&type=category" data-id="penci-mega-2">
 											<span>Saigon foods</span>
 										</a>
-										<a class="mega-cat-child" href="#" data-id="penci-mega-3">
+										<a class="mega-cat-child" href="http://localhost:8080/recipes?query=Central+foods&type=category" data-id="penci-mega-3">
 											<span>Central foods</span>
 										</a>
-										<a class="mega-cat-child" href="#" data-id="penci-mega-4">
+										<a class="mega-cat-child" href="http://localhost:8080/recipes?query=Tet+foods&type=category" data-id="penci-mega-4">
 											<span>Tet foods</span>
 										</a>
-										<a class="mega-cat-child" href="#" data-id="penci-mega-5">
+										<a class="mega-cat-child" href="http://localhost:8080/recipes?query=Summer+foods&type=category" data-id="penci-mega-5">
 											<span>Summer foods</span>
 										</a>
-										<a class="mega-cat-child all-style" href="#" data-id="penci-mega-6">
+										<a class="mega-cat-child all-style" href="recipes" data-id="penci-mega-6">
 											<span>All</span>
 										</a>
 									</div>
