--- a/app/app/views/user/profile.html.erb
+++ b/app/app/views/user/profile.html.erb
@@ -109,10 +109,12 @@
                     </div>
                     <div class="form-group">
                         <label for="">Change password</label>
-                        <input type="password" class="form-control" name="user[current_password]"
+                        <input style="margin:5px 0" type="password" class="form-control" name="user[current_password]"
                             id="user_username" placeholder="Current Password *" value="" />
                         <input type="password" class="form-control" name="user[password]"
                             id="user_username" placeholder="New Password *" value="" />
+                        <input type="password" class="form-control" name="user[password]"
+                            id="user_username" placeholder="Confirm New Password *" value="" />
                     </div>
                     <div class="form-group">
                         <input type="submit" name="commit" class="btnSubmit" value="Update""/>
